# go-dotter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  clang-reformat-gameplay-plugin.ps1  gamedesign.md  project.godot  project.godot~
.godot/editor/: filesystem_cache8  project_metadata.cfg
debug-draw-3d-plugin/: CMakeLists.txt  gdextension.in  register_types.cpp
debug-draw-3d-plugin/include/debugdraw3d/: api.h
debug-draw-3d-plugin/src/debugdraw3d/: debug_draw_manager.cpp  debug_draw_manager.h
debug-draw-3d-plugin/src/debugdraw3d/3d/: debug_draw_3d.cpp  debug_draw_3d.h
example-plugin/: CMakeLists.txt  gdextension.in  register_types.cpp  register_types.h
example-plugin/src/: node3d_extension.cpp
gameplay-plugin/: CMakeLists.txt  register_types.cpp  register_types.h
gameplay-plugin/include/: fsm.h  mainnode.h  nodecomponent.hpp
gameplay-plugin/src/: camerapivot.cpp  core.cpp  grapplecomponent.cpp  grapplenode.cpp  inputcomponent.cpp  mainnode.cpp  parrycomponent.cpp  playerfsm.cpp  playernode.cpp  playerstates.cpp
gameplay_cpp/: CMakeLists.txt  SConstruct  sconstruct.py  version.h
gameplay_cpp/addons/gameplay_cpp/: gameplaycpp.gdextension  gdextension.gdextension  gdextension.in
gameplay_cpp/include/: mainnode.h
gameplay_cpp/include/character/: playerfsm.h  playernode.h  playerstates.h
gameplay_cpp/include/components/: grapplecomponent.h  inputcomponent.h  parrycomponent.h
gameplay_cpp/include/core/: README.md  core.h
gameplay_cpp/include/npcs/turret/: turretnode.cpp
gameplay_cpp/src/: camerapivot.cpp  camerapivot.os  core.cpp  core.os  grapplecomponent.cpp  inputcomponent.cpp  mainNode.cpp  mainNode.h  mainnode.cpp  playernode.cpp  playerstates.cpp  register_types.cpp
gameplay_cpp/src/character/: cameraPivot.cpp  cameraPivot.h  camerapivot.cpp  camerapivot.h  playerFsm.hpp  playerGui.hpp  playerNode.cpp  playerNode.h  playerStates.cpp  playerStates.h  playerfsm.h  playernode.cpp  playernode.h  playerstates.cpp  playerstates.h
gameplay_cpp/src/character/animation/: oneShotNode.hpp  typedefs.hpp
gameplay_cpp/src/character/fsm/: fsm.hpp  typedefs.hpp
gameplay_cpp/src/character/fsm/states/: _utils.hpp  _utils.hppE  attack.hpp  attack.hppE  grapplelaunch.hpp  grapplelaunch.hppE  inair.hpp  onground.hpp  parry.hpp  parry.hppE  parryjump.hpp  parrypost.hpp  parrypost.hppE  parrypre.hpp  pregrapplelaunch.hpp  pregrapplelaunch.hppE  template
gameplay_cpp/src/character/gui/: levelselect.hpp  pausemenu.hpp  playerGui.hpp  seameter.hpp
gameplay_cpp/src/character/gui/utils/: button.hpp
gameplay_cpp/src/components/: animation.hpp  animationComponent.cpp  animationComponent.h  attackComponent.cpp  attackComponent.h  attackInstigator.hpp  attackTarget.hpp  attackTargetComponent.h  grappleComponent.cpp  grappleComponent.h  grappleInstigator.hpp  grappleInstigatorComponent.cpp  grappleInstigatorComponent.h  grappleTarget.hpp  grappleTargetComponent.cpp  grappleTargetComponent.h  grapplecomponent.cpp  grapplecomponent.h  inputComponent.cpp  inputComponent.h  inputcomponent.cpp  inputcomponent.h  parryInstance.cpp  parryInstance.h  parryInstigator.cpp  parryInstigator.h  parryInstigator.hpp  parryInstigatorComponent.cpp  parryInstigatorComponent.h  parryTarget.hpp  parryTargetComponent.cpp  parryTargetComponent.h  parryTargetComponent.hpp  parrycomponent.cpp  parryinstigatorcomponent.cpp  parryinstigatorcomponent.h  parrytargetcomponent.cpp  parrytargetcomponent.h  typedefs.hpp  weapon.hpp
gameplay_cpp/src/components/baseClasses/: grapple.hpp  grappleBase.hpp  grappleBaseComponent.hpp
gameplay_cpp/src/components/dataObjects/: attackInstance.cpp  attackInstance.h  parryInstance.hpp
gameplay_cpp/src/core/: core.cpp  core.h  fsm.hpp  godotUtils.hpp  godotincludes.h  log.cpp  log.h  math.hpp  nodeComponent.hpp  timer.hpp  typedefs.hpp
gameplay_cpp/src/events/: attack.hpp  collision.hpp  parry.hpp
gameplay_cpp/src/gameplayscenes/: billboard.hpp  stairs.hpp
gameplay_cpp/src/gameplayscenes/helpers/: stairs.hpp
gameplay_cpp/src/helpers/: godothelpers.hpp
gameplay_cpp/src/managers/: inputManager.cpp  inputManager.h
gameplay_cpp/src/npcs/: grapplenode.cpp  grapplenode.h  turretnode.cpp
gameplay_cpp/src/npcs/projectile/: fsm.cpp  fsm.h  projectile.cpp  projectile.h
gameplay_cpp/src/npcs/projectile/fsm/: fsm.h  fsm.hpp  typedef.h  typedefs.hpp
gameplay_cpp/src/npcs/projectile/fsm/states/: _utils.h  _utils.hpp  launched.cpp  launched.h  launched.hpp  parried.cpp  parried.h  parried.hpp  parryFreeze.hpp  postParryLaunch.h  postParryLaunch.hpp
gameplay_cpp/src/npcs/turret/: turretNode.cpp  turretNode.h  turretnode.cpp  turretnode.h
gameplay_cpp/src/test/: turretnode.cpp
gameplay_cpp/src/utils/: animationTweener.hpp  circularbuffer.h
gameplay_cpp/templates/: gdextension
gameplay_cpp/tests/: test_circularbuffer.h
godot-cpp/: .gitignore  CMakeLists.txt  binding_generator.py
godot-cpp/cmake/: GodotCompilerWarnings.cmake
godot-cpp/tools/: godotcpp.py
libraries/core/: assert.hpp  core.hpp  fsm.hpp  godotUtils.hpp  log.hpp  math.hpp  nodeComponent.hpp  typedefs.hpp  utils.hpp
parameter_plugin/: readme.md  sconstruct.py  version.h
parameter_plugin/src/: configHandler.cpp  configHandler.h  configReader.cpp  configReader.h  configReader.hpp  parameterRegistry.cpp  parameterRegistry.h  register_types.cpp
parameter_plugin/templates/: gdextension
patches/godot-cpp/: no_default_target.patch
patches/godot_debug_draw_3d/: big_patch_making_dd3d_submodule_to_godotter.patch  godot-cpp.patch  plugin-cpp-api.patch  sconstruct.patch
project/: .project.godot.un~  application.json  config.json  dummy.blend  dummy.blend.import  export_presets.cfg  project.godot  testCharacter.tscn
project/assetscenes/: billboard.tscn  grapplenode.tscn  player.tscn  (+3 more)
scripts/: README.md  build_gameplay-cpp.sh  build_godot-debug-draw-3d.sh  bump_version.sh  clang_format_perform.sh  export_project.sh  first_compile.sh  generate_config_hpp.py  generate_typed_config.py  setup_environment.sh
tools/: perform_static_analysis.sh
(+96 files in other folders)
